--- a/4.iot_esp32.md
+++ b/4.iot_esp32.md
@@ -194,13 +194,7 @@ ESP32 GPIO4  --->  DATA (DHT11)
 3. ในช่องค้นหา พิมพ์ “DHT” 
 4. เลือกติดตั้ง **“DHT sensor library by Adafruit”** (หรือหากชอบไลบรารีอื่นเช่น “DHTesp” ก็สามารถใช้ได้เช่นกัน)
 
-สำหรับโค้ดตัวอย่างในที่นี้ จะใช้ **Adafruit DHT sensor library**
-
----
-
-## 7. โค้ดตัวอย่าง (Adafruit DHT Library)
-
-ตัวอย่างนี้สมมติว่าเชื่อมต่อขา DATA ของ DHT11 ไปที่ **GPIO4** ของ ESP32
+สำหรับโค้ดตัวอย่างในที่นี้ จะใช้ **Adafruit DHT sensor library** โดยสมมุติว่าเชื่อมต่อขา DATA ของ DHT11 ไปที่ **GPIO4** ของ ESP32
 
 ```cpp
 #include <DHT.h>
@@ -259,5 +253,164 @@ void loop() {
    - ตรวจเช็คหากเป็น `NaN` แสดงว่าอ่านค่าไม่สำเร็จ  
    - พิมพ์ค่าออกทาง `Serial`  
    - `delay(2000)` หน่วง 2 วินาที แล้วค่อยวนอ่านใหม่
+
+---
+
+## 6. การอ่านค่าจากเซนเซอร์ **GP2Y1014AU0F** (หรือบางครั้งเรียกย่อ ๆ ว่า “Sharp Dust Sensor”)
+ตัวอย่างโค้ดเบื้องต้นในการอ่านค่าฝุ่นจากเซนเซอร์ **GP2Y1014AU0F** (หรือบางครั้งเรียกย่อ ๆ ว่า “Sharp Dust Sensor”) ร่วมกับบอร์ด **ESP32** ผ่าน **Arduino IDE** พร้อมคำอธิบายการเชื่อมต่อ สาระสำคัญของการจ่ายไฟ และวิธีคำนวณค่าฝุ่นแบบพื้นฐาน
+
+> **หมายเหตุ**: เซนเซอร์ GP2Y1014AU0F ถูกออกแบบให้ทำงานที่ 5V เป็นหลัก โดยเอาต์พุตจะเป็นสัญญาณ Analog สูงสุดประมาณ 4.5V-5V หากจะนำมาวัดด้วย ESP32 (ซึ่งรองรับสัญญาณอินพุต ADC สูงสุด ~3.3V) ต้องใช้ **วงจรลดแรงดัน (Voltage Divider)** หรือวิธีอื่นในการปรับเอาต์พุตให้ไม่เกิน 3.3V เพื่อป้องกันการทำลาย GPIO ของ ESP32
+
+ขาของเซนเซอร์มี 6 ขา (เรียงจากซ้ายไปขวา หากดูจากด้านที่มีตัวอักษร) โดยเอกสารของ Sharp ระบุไว้ดังนี้
+
+1. **Pin 1 (V-LED)** : ขาไฟเลี้ยงไดโอด (LED) ภายในเซนเซอร์  
+2. **Pin 2 (LED-GND)** : ขา GND สำหรับ LED  
+3. **Pin 3 (S-GND)** : ขา GND ของสัญญาณ  
+4. **Pin 4 (Vo)** : ขาเอาต์พุตสัญญาณ Analog  
+5. **Pin 5 (Vcc)** : ขาไฟเลี้ยงวงจรเซนเซอร์  
+6. **Pin 6 (LED)** : ขาเปิด/ปิด LED ภายในเซนเซอร์ (ควบคุมจาก MCU)
+
+อย่างไรก็ตาม บางโมดูล Breakout ที่ขายในตลาด อาจมีการต่อ R และคอนฟิกภายในแตกต่างกันเล็กน้อย ควรตรวจสอบคู่มือ/แผงวงจร (schematic) ของโมดูลนั้น ๆ ประกอบด้วย
+
+---
+
+### 6.1 การจ่ายไฟและการเชื่อมต่อกับ ESP32
+
+#### ไฟเลี้ยงเซนเซอร์
+
+- ตามสเปก เซนเซอร์ต้องการ **5V** เป็นไฟเลี้ยงหลัก (ที่ขา Vcc และ V-LED) เพื่อให้ LED ภายในทำงานเต็มประสิทธิภาพ  
+- ESP32 ทำงานที่ **3.3V** ดังนั้นการจะเปิด/ปิด LED ผ่านขา **Pin 6 (LED)** โดยตรงด้วยสัญญาณ 3.3V อาจมีแรงดันไม่พอ (ขึ้นกับโมดูลว่าออกแบบมาให้รองรับหรือไม่)  
+  - วิธีที่ปลอดภัยคือใช้ **ทรานซิสเตอร์** หรือ **MOSFET** สักตัว ควบคุมการจ่าย 5V เข้าขา LED (Pin 1/Pin 6) แทนการจ่ายตรงจาก GPIO ของ ESP32  
+  - หากเป็นโมดูลที่มีวงจรทรานซิสเตอร์มาให้แล้ว (เช่น โมดูลบางรุ่นมีขา Control LED แยก) ก็สามารถใช้ GPIO 3.3V ของ ESP32 ควบคุมได้
+
+#### เอาต์พุตอนาล็อก (Vo)
+
+- ขา **Vo** จะมีแรงดันสูงสุดใกล้เคียง 5V (ตามปริมาณฝุ่นและการตอบสนองของเซนเซอร์)  
+- **ต้องใช้วงจรลดแรงดัน (Voltage Divider)** เพื่อให้เอาต์พุตเข้าสู่ขา ADC ของ ESP32 ไม่เกิน 3.3V  
+- ตัวอย่างการทำ Voltage Divider (R1, R2) เพื่อให้ Output เหลือประมาณ 3.3V เมื่อขา Vo สูงสุด ~5V
+
+  \[
+    V_{out} = V_{in} \times \frac{R2}{R1 + R2}
+  \]
+
+  หากต้องการลดจาก 5V ลงเป็น 3.3V อาจเลือกสัดส่วนเช่น R1 = 2kΩ, R2 = 3.3kΩ (หรือค่าอื่น ๆ ที่ใกล้เคียง) เพื่อให้เอาต์พุตหลังแบ่งไม่เกิน 3.3V
+
+#### การต่อสาย
+
+1. **Vcc (Pin 5)** -> 5V (จาก ESP32 หรือแหล่งจ่าย 5V อื่นที่เชื่อม GND ร่วมกัน)  
+2. **S-GND (Pin 3) และ LED-GND (Pin 2)** -> GND เดียวกับ ESP32  
+3. **V-LED (Pin 1)** -> 5V (ผ่าน R ซีรีส์หรือชุดทรานซิสเตอร์ขึ้นกับโมดูล)  
+4. **LED (Pin 6)** -> ขา GPIO ของ ESP32 (ผ่านทรานซิสเตอร์หรือวงจรตามโมดูล) เพื่อเปิด/ปิด LED ภายในเซนเซอร์  
+5. **Vo (Pin 4)** -> ไปที่วงจร Voltage Divider -> ขา ADC ของ ESP32 (ตัวอย่างเช่น GPIO34, GPIO35, GPIO36 หรือ GPIO39 ที่เป็น ADC)
+
+> หากโมดูลมีการรวม R จำกัดกระแส LED ไว้แล้ว และออกแบบให้ใช้ 3.3V ควบคุม LED ได้เลย ก็ยึดตามวิธีการของโมดูลนั้น ๆ (แต่ต้องดูเอกสารกำกับ)
+
+---
+
+### 6.2 หลักการอ่านข้อมูลและคำนวณค่าฝุ่น
+
+1. ภายในเซนเซอร์มี **LED อินฟราเรด** และ **โฟโต้ไดโอด** วัดแสงที่กระเจิงจากฝุ่นในอากาศ  
+2. ในการวัดแบบ “แมนนวล” (Manual Drive) จะต้อง:
+   - **ดึง Pin 6 (LED)** ให้เป็น LOW เพื่อเปิด LED (หรือ HIGH แล้วแต่โมดูล — ต้องดูเอกสาร)  
+   - **หน่วงเวลาสั้น ๆ** (มัก ~280 ไมโครวินาที)  
+   - อ่านค่าอนาล็อกที่ Pin Vo  
+   - ปิด LED (หรือสลับสัญญาณกลับ) เพื่อประหยัดพลังงาน และหน่วงเวลารอรอบถัดไป  
+   - คำนวณค่าฝุ่นจากแรงดันที่อ่านได้ ตามสูตรที่ผู้ผลิตแนะนำ  
+3. หากโมดูลออกแบบมาให้ LED ทำงานตลอด (Continuous Drive) เราสามารถอ่านเอาต์พุต Vo ได้ตลอดเวลา แต่ค่าอาจไม่นิ่งเท่าการ Drive แบบเป็นช่วง ๆ
+
+#### สูตรคำนวณ (ตัวอย่างทั่วไป)
+
+มีหลายสูตรที่ใช้กัน ขึ้นอยู่กับแรงดันไฟเลี้ยง, ความละเอียด ADC, และ R ที่ใช้ ตัวอย่างเช่น (ค่าโดยประมาณ):
+
+\[
+  \text{Voltage} = \frac{\text{ADC_value}}{\text{max_ADC}} \times V_{ref}
+\]
+
+เช่น ถ้า ESP32 ADC 12 บิต (0-4095) และ Vref ~3.3V:
+\[
+  \text{Voltage} = \frac{\text{ADC_value}}{4095} \times 3.3
+\]
+
+จากนั้นมีสูตรความสัมพันธ์ระหว่าง \(\text{Voltage}\) กับ \(\text{DustDensity}\) (มก./ลบ.ม. หรือ mg/m^3 หรือบางครั้งเป็นหน่วย ug/m^3) ซึ่งมักจะมาจากเอกสารของผู้ผลิตหรือการเทียบเชิงประสบการณ์ ตัวอย่าง (ไม่เป็นทางการ) ที่เคยอ้างอิงกันคือ:
+
+\[
+  \text{DustDensity} (\text{mg/m}^3) \approx 0.17 \times \text{Voltage} - 0.1
+\]
+
+แต่ทั้งนี้ขึ้นกับการต่อวงจรและเงื่อนไขอื่น ต้องทดสอบเทียบเคียงค่าจริงอีกที
+
+---
+
+### 6.3 ตัวอย่างโค้ด (ด้วย Arduino IDE บน ESP32)
+
+สมมติว่า:
+- เราใช้ GPIO 33 (ADC) รับสัญญาณที่แบ่งแรงดันจาก Vo (หลังผ่าน Voltage Divider แล้ว)  
+- เราใช้ GPIO 27 ควบคุมขา LED (Pin 6) ของเซนเซอร์ (ผ่านทรานซิสเตอร์หรือโมดูลที่รองรับ)
+
+```cpp
+// ตัวอย่าง: อ่านค่าเซนเซอร์ฝุ่น GP2Y1014AU0F แบบกดเปิด LED ชั่วขณะ
+// แล้ววัดค่าอะนาล็อก
+
+// กำหนดพิน
+#define PIN_LED_CTRL  27   // ขาที่ควบคุม LED (Pin 6 ของเซนเซอร์) ผ่านทรานซิสเตอร์
+#define PIN_SENSOR_A  33   // ขา ADC ที่รับ Vo (Pin 4) หลังผ่าน Voltage Divider
+
+void setup() {
+  Serial.begin(115200);
+  
+  pinMode(PIN_LED_CTRL, OUTPUT);
+  digitalWrite(PIN_LED_CTRL, HIGH); // ปิด LED ไว้ก่อน (ขึ้นกับโมดูล อาจกลับกัน)
+}
+
+void loop() {
+  // 1) เปิด LED โดยดึงสัญญาณ (LOW หรือ HIGH) ตามที่เซนเซอร์ต้องการ
+  digitalWrite(PIN_LED_CTRL, LOW); 
+  // 2) หน่วง ~280 ไมโครวินาที รอเซนเซอร์เซตตัว
+  delayMicroseconds(280);
+
+  // 3) อ่านค่า ADC
+  int adcValue = analogRead(PIN_SENSOR_A);  // ESP32 ADC (0-4095 ตามค่าเริ่มต้น 12 บิต)
+  
+  // 4) หน่วง ~40 ไมโครวินาที (ตามสเปก)
+  delayMicroseconds(40);
+
+  // 5) ปิด LED
+  digitalWrite(PIN_LED_CTRL, HIGH);
+
+  // 6) เหลือเวลาอีกประมาณ ~9.68 ms (หรือตามต้องการ) จึงค่อยวัดรอบถัดไป
+  // รวมแล้วรอบการวัด ~10 ms
+  delayMicroseconds(9680);
+
+  // แปลงเป็นแรงดัน (สมมติใช้ 3.3V เป็น Vref และ ADC 12 บิต)
+  float voltage = adcValue * (3.3 / 4095.0);
+
+  // คำนวณค่าฝุ่น (สูตรตัวอย่าง)
+  // ค่า offset และสัดส่วนต้องปรับตามสภาพจริงและวงจรที่ใช้
+  float dustDensity = 0.17 * voltage - 0.1; // mg/m^3 (ประมาณการ)
+
+  Serial.print("ADC = ");
+  Serial.print(adcValue);
+  Serial.print(", Voltage = ");
+  Serial.print(voltage, 3);
+  Serial.print(" V, DustDensity ~ ");
+  Serial.print(dustDensity, 3);
+  Serial.println(" mg/m^3");
+  
+  // อาจหน่วงเพิ่มเล็กน้อยหากไม่ต้องการอ่านถี่เกินไป
+  delay(200); 
+}
+```
+
+**ทดไว้** 
+
+1. **digitalWrite(PIN_LED_CTRL, LOW); delayMicroseconds(280);**  
+   - กำหนดให้ LED ของเซนเซอร์ทำงานช่วงสั้น ๆ เพื่อให้การวัดใกล้เคียงสเปก (ประมาณ 280 µs)  
+2. **analogRead(PIN_SENSOR_A);**  
+   - อ่านค่า ADC ขณะ LED กำลังส่อง (ฝุ่นจะกระเจิงแสงมาสู่โฟโต้ไดโอดภายใน)  
+3. **delayMicroseconds(40); digitalWrite(PIN_LED_CTRL, HIGH);**  
+   - หน่วงเล็กน้อยแล้วปิด LED รอให้เซนเซอร์พักสำหรับรอบถัดไป  
+4. **คำนวณแรงดัน** จากค่า ADC (ESP32 = 12-bit = 0-4095)  
+   - `voltage = (adcValue / 4095) * 3.3`  
+5. **สูตรฝุ่น (dustDensity)** เป็นการประมาณค่า หากต้องการความแม่นยำควรปรับเทียบ (calibration) กับอุปกรณ์วัดมาตรฐาน
 
 ---
