--- a/4.iot_esp32.md
+++ b/4.iot_esp32.md
@@ -323,13 +323,15 @@ $$
 มีหลายสูตรที่ใช้กัน ขึ้นอยู่กับแรงดันไฟเลี้ยง, ความละเอียด ADC, และ R ที่ใช้ ตัวอย่างเช่น (ค่าโดยประมาณ):
 
 $$
-\text{Voltage} = \frac{\text{ADC_value}}{\text{max_ADC}} \times V_{ref}
+\text{Voltage} = \frac{\text{ADC\_value}}{\text{max\_ADC}} \times V_{ref}
 $$
 
 เช่น ถ้า ESP32 ADC 12 บิต (0-4095) และ Vref ~3.3V:
+
 $$
-\text{Voltage} = \frac{\text{ADC_value}}{4095} \times 3.3
+\text{Voltage} = \frac{\text{ADC\_value}}{4095} \times 3.3
 $$
+
 
 จากนั้นมีสูตรความสัมพันธ์ระหว่าง \(\text{Voltage}\) กับ \(\text{DustDensity}\) (มก./ลบ.ม. หรือ mg/m^3 หรือบางครั้งเป็นหน่วย ug/m^3) ซึ่งมักจะมาจากเอกสารของผู้ผลิตหรือการเทียบเชิงประสบการณ์ ตัวอย่าง (ไม่เป็นทางการ) ที่เคยอ้างอิงกันคือ:
 
