--- a/4.iot_esp32.md
+++ b/4.iot_esp32.md
@@ -322,22 +322,16 @@ $$
 
 มีหลายสูตรที่ใช้กัน ขึ้นอยู่กับแรงดันไฟเลี้ยง, ความละเอียด ADC, และ R ที่ใช้ ตัวอย่างเช่น (ค่าโดยประมาณ):
 
-$$
-\text{Voltage} = \frac{\text{ADC\ _value}}{\text{max\_ADC}} \times V_{ref}
-$$
+Voltage = \frac{\text{ADC value}}{\text{max ADC}} \times V_{ref}
 
 เช่น ถ้า ESP32 ADC 12 บิต (0-4095) และ Vref ~3.3V:
 
-$$
-\text{Voltage} = \frac{\text{ADC\ _value}}{4095} \times 3.3
-$$
+Voltage = \frac{\text{ADC value}}{4095} \times 3.3
 
 
 จากนั้นมีสูตรความสัมพันธ์ระหว่าง \(\text{Voltage}\) กับ \(\text{DustDensity}\) (มก./ลบ.ม. หรือ mg/m^3 หรือบางครั้งเป็นหน่วย ug/m^3) ซึ่งมักจะมาจากเอกสารของผู้ผลิตหรือการเทียบเชิงประสบการณ์ ตัวอย่าง (ไม่เป็นทางการ) ที่เคยอ้างอิงกันคือ:
 
-$$
-\text{DustDensity} (\text{mg/m}^3) \approx 0.17 \times \text{Voltage} - 0.1
-$$
+Dust Density (mg/m³) ≈ 0.17 \times \text{Voltage} - 0.1
 
 แต่ทั้งนี้ขึ้นกับการต่อวงจรและเงื่อนไขอื่น ต้องทดสอบเทียบเคียงค่าจริงอีกที
 
