--- a/4.iot_esp32.md
+++ b/4.iot_esp32.md
@@ -332,7 +332,7 @@ $$
 Voltage = \frac{\text{ADC value}}{4095} \times 3.3
 $$
 
-จากนั้นมีสูตรความสัมพันธ์ระหว่าง \(\text{Voltage}\) กับ \(\text{DustDensity}\) (มก./ลบ.ม. หรือ mg/m^3 หรือบางครั้งเป็นหน่วย ug/m^3) ซึ่งมักจะมาจากเอกสารของผู้ผลิตหรือการเทียบเชิงประสบการณ์ ตัวอย่าง (ไม่เป็นทางการ) ที่เคยอ้างอิงกันคือ:
+จากนั้นมีสูตรความสัมพันธ์ระหว่าง $\text{Voltage}$ กับ $\text{DustDensity}$ (มก./ลบ.ม. หรือ mg/m^3 หรือบางครั้งเป็นหน่วย ug/m^3) ซึ่งมักจะมาจากเอกสารของผู้ผลิตหรือการเทียบเชิงประสบการณ์ ตัวอย่าง (ไม่เป็นทางการ) ที่เคยอ้างอิงกันคือ:
 
 $$
 Dust Density (mg/m³) ≈ 0.17 \times \text{Voltage} - 0.1
