--- a/doc/4.iot_esp32.md
+++ b/doc/4.iot_esp32.md
@@ -23,6 +23,7 @@
 4. **เลือกพอร์ต (Port)**  
    - เสียบสาย USB เข้ากับคอมพิวเตอร์
    - ไปที่ **Tools** > **Port** แล้วเลือกพอร์ตที่ปรากฏ (เช่น COM3, COM4 ใน Windows หรือ /dev/cu.usbserial ใน macOS)
+   - driver https://www.silabs.com/developer-tools/usb-to-uart-bridge-vcp-drivers?tab=downloads
 
 ---
 
