--- a/doc/4.iot_esp32.md
+++ b/doc/4.iot_esp32.md
@@ -126,38 +126,69 @@ void loop() {
 
 ## 4. โค้ดตัวอย่าง: เชื่อมต่อ Wi-Fi และดู IP Address
 
+หา mac address สำหรับ regidter เข้า jumbo 
+
+```cpp
+// wifi
+#include <WiFi.h>
+#include <esp_wifi.h>
+const char* ssid     = "@JumboPlusIoT";     
+const char* password = "mnayyxei"; 
+
+void readMacAddress(){
+  uint8_t baseMac[6];
+  esp_err_t ret = esp_wifi_get_mac(WIFI_IF_STA, baseMac);
+  if (ret == ESP_OK) {
+    Serial.printf("%02x:%02x:%02x:%02x:%02x:%02x\n",
+                  baseMac[0], baseMac[1], baseMac[2],
+                  baseMac[3], baseMac[4], baseMac[5]);
+  } else {
+    Serial.println("Failed to read MAC address");
+  }
+}
+```
+
+เข้าไปตั้งค่าตามนี้ https://network.cmu.ac.th/wiki/index.php/JumboPlusIoT
+
 เมื่อทราบ SSID และรหัสผ่านแล้ว สามารถเชื่อมต่อและแสดง IP Address ได้ดังนี้
 
 ```cpp
-#include "WiFi.h"
+// wifi
+#include <WiFi.h>
+#include <esp_wifi.h>
+const char* ssid     = "@JumboPlusIoT";     
+const char* password = "mnayyxei"; 
 
-const char* ssid     = "YOUR_SSID";      // เปลี่ยนเป็นชื่อ Wi-Fi ของคุณ
-const char* password = "YOUR_PASSWORD";  // เปลี่ยนเป็นรหัสผ่าน Wi-Fi ของคุณ
+void readMacAddress(){
+  uint8_t baseMac[6];
+  esp_err_t ret = esp_wifi_get_mac(WIFI_IF_STA, baseMac);
+  if (ret == ESP_OK) {
+    Serial.printf("%02x:%02x:%02x:%02x:%02x:%02x\n",
+                  baseMac[0], baseMac[1], baseMac[2],
+                  baseMac[3], baseMac[4], baseMac[5]);
+  } else {
+    Serial.println("Failed to read MAC address");
+  }
+}
 
 void setup() {
-  Serial.begin(115200);
-  Serial.println();
-  Serial.println("เชื่อมต่อ Wi-Fi");
+  // put your setup code here, to run once:
+  Serial.begin(9600);
 
-  // ตั้งโหมดเป็น Station
+  // อ่าน mac address
+  readMacAddress();
+
+  // เชื่อมต่อ Wi-Fi
   WiFi.mode(WIFI_STA);
-  // เริ่มเชื่อมต่อ
   WiFi.begin(ssid, password);
 
-  // รอจนกว่าจะเชื่อมต่อได้
   while (WiFi.status() != WL_CONNECTED) {
     delay(500);
     Serial.print(".");
   }
   
-  Serial.println("");
-  Serial.println("เชื่อมต่อสำเร็จ!");
-  Serial.print("IP Address: ");
+  Serial.println("เชื่อมต่อสำเร็จ! IP Address:");
   Serial.println(WiFi.localIP());
-}
-
-void loop() {
-  // ยังไม่ทำอะไรเพิ่มเติมในส่วนนี้
 }
 ```
 
@@ -254,6 +285,77 @@ void loop() {
    - ตรวจเช็คหากเป็น `NaN` แสดงว่าอ่านค่าไม่สำเร็จ  
    - พิมพ์ค่าออกทาง `Serial`  
    - `delay(2000)` หน่วง 2 วินาที แล้วค่อยวนอ่านใหม่
+
+ส่งค่าไปยัง server (ในที่นี้ใช้ผ่าน ngrok)
+
+```cpp
+// dht11
+#include <DHT.h>
+#define DHTPIN 4
+#define DHTTYPE DHT11
+DHT dht(DHTPIN, DHTTYPE);
+
+// wifi
+#include <WiFi.h>
+#include <esp_wifi.h>
+const char* ssid     = "@JumboPlusIoT";     
+const char* password = "mnayyxei"; 
+
+// http client
+#include <HTTPClient.h> 
+const char* serverName = "https://a552-202-28-251-54.ngrok-free.app/api/v1/data/"; 
+
+void setup() {
+  // put your setup code here, to run once:
+  Serial.begin(9600);
+
+  // เชื่อมต่อ Wi-Fi
+  WiFi.mode(WIFI_STA);
+  WiFi.begin(ssid, password);
+
+  while (WiFi.status() != WL_CONNECTED) {
+    delay(500);
+    Serial.print(".");
+  }
+  
+  Serial.println("เชื่อมต่อสำเร็จ! IP Address:");
+  Serial.println(WiFi.localIP());
+
+  dht.begin();
+}
+
+void loop() {
+  // put your main code here, to run repeatedly:
+  // get dht 11
+  float humidity = dht.readHumidity();
+  float temperature = dht.readTemperature();
+
+  if(isnan(humidity) || isnan(temperature)){
+    Serial.println("อ่านค่าไม่ได้");
+  }
+  Serial.print(humidity);
+  Serial.print(temperature);
+
+  // send api
+  HTTPClient http;
+  http.begin(serverName);
+  http.addHeader("Content-Type", "application/json"); 
+  String jsonData = "{";
+  jsonData += "\"sta_code\":\"A4\",";                   // Station code
+  jsonData += "\"sta_name\":\"Station 5\",";            // Station name
+  jsonData += "\"hum\":" + String(humidity) + ",";      // PM2.5 value
+  jsonData += "\"temp\":" + String(temperature);        // Temperature
+  jsonData += "}";
+
+  Serial.println(jsonData);
+  int httpResponseCode = http.POST(jsonData);
+  http.end();
+
+  Serial.println("");
+  delay(6000);
+}
+
+```
 
 ---
 
