--- a/doc/4.iot_esp32.md
+++ b/doc/4.iot_esp32.md
@@ -310,6 +310,7 @@ void setup() {
   Serial.begin(9600);
 
   // เชื่อมต่อ Wi-Fi
+  // AP=access point VS STA=station
   WiFi.mode(WIFI_STA);
   WiFi.begin(ssid, password);
 
