--- a/doc/5.apex_chart.md
+++ b/doc/5.apex_chart.md
@@ -1,84 +1,103 @@
-ขั้นตอนสำหรับการสร้าง Line Chart ที่แสดงข้อมูลอุณหภูมิและความชื้น โดยใช้ [ApexCharts](https://apexcharts.com/) ในฝั่ง Client และดึงข้อมูลจากอุปกรณ์ ESP32 ผ่าน Express API บนฝั่ง Server 
+ตัวอย่างการสร้างกราฟเส้น (Line Chart) โดยแสดงค่า **อุณหภูมิ** และ **ความชื้น** โดยใช้ [ApexCharts](https://apexcharts.com/) โดยดึงข้อมูลจาก ESP32 ผ่าน Express API ซึ่งข้อมูลจะถูกบันทึกไว้ในฐานข้อมูล PostgreSQL 
+
+> **หมายเหตุ:** ในตัวอย่างนี้ เราสมมติว่า ESP32 ได้ส่งข้อมูลเข้ามาในตาราง `iot` แล้ว และเราใช้ Node.js ร่วมกับ Express ในการสร้าง API และใช้ [node-postgres (pg)](https://node-postgres.com/) ในการเชื่อมต่อกับ PostgreSQL
 
 ---
 
-## 1. สิ่งที่ต้องเตรียม
-- **Node.js และ npm**: สำหรับรัน Express API
-- **Express**: ใช้สร้าง API server
-- **ApexCharts**: ไลบรารีสำหรับแสดงกราฟบนเว็บ
-- **ESP32**: (สำหรับตัวอย่างนี้จะใช้ข้อมูลจำลอง) โดยทั่วไป ESP32 จะส่งข้อมูลอุณหภูมิและความชื้นไปยัง API
+## 1. เตรียมสภาพแวดล้อมสำหรับ Backend (Express API)
 
----
+### 1.1 ติดตั้ง Node.js และ Package ที่จำเป็น
 
-## 2. สร้าง Express API
+ตรวจสอบให้แน่ใจว่ามี Node.js ติดตั้งแล้วบนเครื่องคุณ  
+สร้างโปรเจคใหม่และติดตั้งแพ็กเกจที่จำเป็น:
 
-### 2.1 เริ่มโปรเจกต์ Node.js
-1. เปิด Terminal แล้วสร้างโฟลเดอร์โปรเจกต์ใหม่ เช่น `apexcharts-tutorial`
-2. รันคำสั่ง:
-   ```bash
-   npm init -y
-   ```
-3. ติดตั้ง Express:
-   ```bash
-   npm install express
-   ```
+```bash
+mkdir iot-chart
+cd iot-chart
+npm init -y
+npm install express pg cors
+```
 
-### 2.2 เขียนโค้ดสำหรับ Express API
-สร้างไฟล์ชื่อ `server.js` แล้วใส่โค้ดดังต่อไปนี้:
-  
+> **หมายเหตุ:**  
+> - **express**: สำหรับสร้างเว็บเซิร์ฟเวอร์  
+> - **pg**: สำหรับเชื่อมต่อ PostgreSQL  
+> - **cors**: เพื่อเปิดให้มีการเรียก API จาก client (frontend) ได้ (ในกรณีที่จำเป็น)
+
+### 1.2 สร้างไฟล์ `app.js` สำหรับ Express API
+
+สร้างไฟล์ `app.js` และเขียนโค้ดดังนี้:
+
 ```javascript
-// server.js
+// app.js
 const express = require('express');
+const { Pool } = require('pg');
+const cors = require('cors');
 const app = express();
-const port = 3000;
+const port = process.env.PORT || 3000;
 
-// สำหรับตัวอย่างนี้ เราจะใช้ข้อมูลจำลอง (simulate data) 
-// โดยข้อมูลเหล่านี้จะถูกส่งมาจาก ESP32 จริงๆ ในโปรเจกต์จริง ให้แทนที่ด้วยข้อมูลที่รับมาจาก ESP32
-let sensorData = [
-  { time: '12:00', temperature: 25, humidity: 60 },
-  { time: '12:05', temperature: 26, humidity: 62 },
-  { time: '12:10', temperature: 25.5, humidity: 61 },
-  { time: '12:15', temperature: 26.2, humidity: 63 },
-  { time: '12:20', temperature: 25.8, humidity: 60 }
-];
+// ตั้งค่า CORS (หากมีการเรียกจากโดเมนอื่น)
+app.use(cors());
 
-// สร้าง API endpoint สำหรับดึงข้อมูล
-app.get('/api/data', (req, res) => {
-  res.json(sensorData);
+// ตั้งค่าการเชื่อมต่อกับ PostgreSQL
+const pool = new Pool({
+  user: 'postgres',         // แก้ไขเป็นชื่อผู้ใช้งานของเรา
+  host: 'localhost',        // หรือที่อยู่ของเซิร์ฟเวอร์ PostgreSQL
+  database: 'your_db_name', // แก้ไขเป็นชื่อฐานข้อมูลของเรา
+  password: 'your_password',// แก้ไขเป็นรหัสผ่านของเรา แล้วแต่พวกเรานะ
+  port: 5432,               // พอร์ตของ PostgreSQL (ค่าเริ่มต้นคือ 5432)
 });
 
+// สร้าง API endpoint สำหรับดึงข้อมูลอุณหภูมิและความชื้น
+app.get('/api/data', async (req, res) => {
+  try {
+    // เลือกคอลัมน์ ts, temp, rh จากตาราง iot โดยเรียงตามเวลา (ts)
+    const query = 'SELECT ts, temp, rh FROM public.iot ORDER BY ts ASC LIMIT 100';
+    const result = await pool.query(query);
+    res.json(result.rows);
+  } catch (error) {
+    console.error('Error fetching data:', error);
+    res.status(500).json({ error: 'Internal Server Error' });
+  }
+});
+
+// เริ่มเซิร์ฟเวอร์
 app.listen(port, () => {
   console.log(`Server running on http://localhost:${port}`);
 });
 ```
 
-### 2.3 รัน Server
-ใน Terminal รันคำสั่ง:
+### 1.3 รันเซิร์ฟเวอร์
+
+เปิด Terminal แล้วรันคำสั่ง:
+
 ```bash
-node server.js
+node app.js 
 ```
-จะเห็นข้อความ `Server running on http://localhost:3000` ซึ่งหมายความว่า API ของเราพร้อมทำงาน
+
+หรือ nodemon
+
+```bash
+ืnodemon
+```
 
 ---
 
-## 3. สร้างหน้าเว็บสำหรับแสดงกราฟด้วย ApexCharts
+## 2. สร้าง Frontend สำหรับแสดงกราฟด้วย ApexCharts
 
-### 3.1 สร้างไฟล์ HTML
-สร้างไฟล์ `index.html` ในโฟลเดอร์เดียวกับ `server.js` แล้วใส่โค้ดดังนี้:
+### 2.1 สร้างไฟล์ `index.html`
+
+สร้างไฟล์ `index.html` ในโฟลเดอร์โปรเจคเดียวกัน แล้วเขียนโค้ดดังนี้:
 
 ```html
 <!DOCTYPE html>
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>Temperature &amp; Humidity Chart</title>
-  <!-- โหลด ApexCharts ผ่าน CDN -->
+  <title>กราฟแสดงอุณหภูมิและความชื้น</title>
+  <!-- นำเข้า ApexCharts จาก CDN -->
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
+    /* กำหนดความกว้างและความสูงของกราฟ */
     #chart {
       max-width: 800px;
       margin: 35px auto;
@@ -86,75 +105,177 @@ node server.js
   </style>
 </head>
 <body>
-  <h2>กราฟแสดงอุณหภูมิและความชื้น</h2>
+  <h1 style="text-align: center;">กราฟแสดงอุณหภูมิและความชื้น</h1>
   <div id="chart"></div>
-  
-  <script>
-    // ฟังก์ชันสำหรับดึงข้อมูลจาก Express API
-    async function fetchData() {
-      try {
+</body>
+</html>
+```
+
+เพิ่มโค้ดใน app.js
+
+```js
+// ฟังก์ชันสำหรับดึงข้อมูลจาก API
+async function fetchData() {
+    try {
         const response = await fetch('http://localhost:3000/api/data');
         const data = await response.json();
         return data;
-      } catch (error) {
+    } catch (error) {
         console.error('เกิดข้อผิดพลาดในการดึงข้อมูล:', error);
-      }
     }
+}
 
-    // ฟังก์ชันสำหรับเรนเดอร์กราฟด้วย ApexCharts
-    async function renderChart() {
-      const sensorData = await fetchData();
+// ฟังก์ชันสำหรับสร้างกราฟด้วย ApexCharts
+async function renderChart() {
+    const data = await fetchData();
 
-      // เตรียมข้อมูลสำหรับ ApexCharts
-      const categories = sensorData.map(item => item.time);
-      const temperatureSeries = sensorData.map(item => item.temperature);
-      const humiditySeries = sensorData.map(item => item.humidity);
+    // แปลงข้อมูลจาก API ให้เป็นข้อมูลสำหรับกราฟ
+    // ดึงค่าวันเวลา อุณหภูมิ และความชื้นออกจากแต่ละ record
+    const categories = data.map(item => {
+        // แปลงค่า timestamp ให้เป็นรูปแบบที่อ่านง่าย (ใช้ locale 'th-TH' เพื่อแสดงผลเป็นไทย)
+        return new Date(item.ts).toLocaleString('th-TH');
+    });
+    const tempSeries = data.map(item => parseFloat(item.temp));
+    const rhSeries = data.map(item => parseFloat(item.rh));
 
-      var options = {
+    // กำหนด options สำหรับ ApexCharts
+    const options = {
         chart: {
-          type: 'line',
-          height: 350
+            type: 'line',
+            height: 350
         },
         series: [
-          {
-            name: 'อุณหภูมิ (°C)',
-            data: temperatureSeries
-          },
-          {
-            name: 'ความชื้น (%)',
-            data: humiditySeries
-          }
+            {
+                name: 'อุณหภูมิ (°C)',
+                data: tempSeries
+            },
+            {
+                name: 'ความชื้น (%)',
+                data: rhSeries
+            }
         ],
         xaxis: {
-          categories: categories,
-          title: {
-            text: 'เวลา'
-          }
+            categories: categories,
+            title: {
+                text: 'เวลา'
+            },
+            labels: {
+                rotate: -45,
+                style: {
+                    fontSize: '10px'
+                }
+            }
         },
-        // กำหนด y-axis แยกสำหรับอุณหภูมิและความชื้น (สามารถปรับแต่งเพิ่มเติมได้)
-        yaxis: [{
-          title: {
-            text: 'อุณหภูมิ (°C)'
-          }
-        }, {
-          opposite: true,
-          title: {
-            text: 'ความชื้น (%)'
-          }
-        }],
-        tooltip: {
-          shared: true,
-          intersect: false
+        yaxis: {
+            title: {
+                text: 'ค่า'
+            }
+        },
+        title: {
+            text: 'กราฟแสดงอุณหภูมิและความชื้น',
+            align: 'center'
         }
-      };
+    };
 
-      var chart = new ApexCharts(document.querySelector("#chart"), options);
-      chart.render();
+    // สร้างกราฟและ render ลงใน div ที่มี id="chart"
+    const chart = new ApexCharts(document.querySelector("#chart"), options);
+    chart.render();
+}
+
+// เรียกฟังก์ชัน renderChart เมื่อหน้าเว็บโหลดเสร็จ
+window.onload = renderChart;    
+```
+
+ถ้าต้องการแยกกราฟของอุณหภูมิ และ ความชื้น สามารถทำได้ดังนี้
+
+```js
+async function fetchData() {
+    try {
+        const response = await fetch('http://localhost:3000/api/v1/data/A4');
+        const data = await response.json();
+        return data;
+    } catch (error) {
+        console.error('เกิดข้อผิดพลาดในการดึงข้อมูล:', error);
     }
+}
 
-    // เรียกใช้งานฟังก์ชันเรนเดอร์กราฟ
+async function renderChart() {
+    const data = await fetchData();
+
+    // แปลงข้อมูลจาก API
+    const categories = data.map(item => new Date(item.ts).toLocaleString('th-TH'));
+    const tempSeries = data.map(item => parseFloat(item.temp));
+    const rhSeries = data.map(item => parseFloat(item.rh));
+
+    // สร้าง options เบื้องต้นที่ใช้ร่วมกันได้ (สำหรับข้อมูล xaxis และ chart)
+    const baseOptions = {
+        chart: {
+            type: 'line',
+            height: 350
+        },
+        xaxis: {
+            categories: categories,
+            title: {
+                text: 'เวลา'
+            },
+            labels: {
+                rotate: -45,
+                style: {
+                    fontSize: '10px'
+                }
+            }
+        },
+        title: {
+            text: '',
+            align: 'center'
+        }
+    };
+
+    // สร้าง options สำหรับกราฟอุณหภูมิ โดยรวม baseOptions และเพิ่มการตั้งค่าเฉพาะของ yaxis และ series
+    const tempChartOptions = {
+        ...baseOptions,
+        series: [{
+            name: 'อุณหภูมิ',
+            data: tempSeries
+        }],
+        yaxis: {
+            title: {
+                text: 'อุณหภูมิ (°C)'
+            }
+        }
+    };
+
+    // สร้าง options สำหรับกราฟความชื้น
+    const rhChartOptions = {
+        ...baseOptions,
+        series: [{
+            name: 'ความชื้น',
+            data: rhSeries
+        }],
+        yaxis: {
+            title: {
+                text: 'ความชื้น (%)'
+            }
+        }
+    };
+
+    // สร้างอินสแตนซ์สำหรับกราฟอุณหภูมิ
+    const tempChartElem = document.querySelector("#tempChart");
+    const tempChart = new ApexCharts(tempChartElem, tempChartOptions);
+    tempChart.render();
+
+    // สร้างอินสแตนซ์สำหรับกราฟความชื้น
+    const rhChartElem = document.querySelector("#rhChart");
+    const rhChart = new ApexCharts(rhChartElem, rhChartOptions);
+    rhChart.render();
+}
+
+// เรียก renderChart เมื่อหน้าเว็บโหลดเสร็จ
+window.onload = renderChart;
+
+// รีเฟรชกราฟทุก 6 วินาที
+setInterval(() => {
     renderChart();
-  </script>
-</body>
-</html>
+}, 6000);
+
 ```
