--- a/doc/5.apex_chart.md
+++ b/doc/5.apex_chart.md
@@ -94,8 +94,6 @@ node app.js
 <head>
   <meta charset="UTF-8">
   <title>กราฟแสดงอุณหภูมิและความชื้น</title>
-  <!-- นำเข้า ApexCharts จาก CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <style>
     /* กำหนดความกว้างและความสูงของกราฟ */
     #chart {
@@ -108,6 +106,9 @@ node app.js
   <h1 style="text-align: center;">กราฟแสดงอุณหภูมิและความชื้น</h1>
   <div id="chart"></div>
 </body>
+  <!-- นำเข้า ApexCharts จาก CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+  <script src="./app.js"></script>
 </html>
 ```
 
