--- a/doc/5.apex_chart.md
+++ b/doc/5.apex_chart.md
@@ -4,7 +4,7 @@
 
 ---
 
-## 1. เตรียมสภาพแวดล้อมสำหรับ Backend (Express API)
+## 1. เตรียม Backend (Express API) ให้พร้อม
 
 ### 1.1 ติดตั้ง Node.js และ Package ที่จำเป็น
 
@@ -25,7 +25,7 @@ npm install express pg cors
 
 ### 1.2 สร้างไฟล์ `app.js` สำหรับ Express API
 
-สร้างไฟล์ `app.js` และเขียนโค้ดดังนี้:
+สร้างไฟล์ `app.js` และเขียนโค้ดดังนี้ (พวกเราเคยเขียนไปแล้ว)
 
 ```javascript
 // app.js
@@ -86,7 +86,7 @@ node app.js
 
 ### 2.1 สร้างไฟล์ `index.html`
 
-สร้างไฟล์ `index.html` ในโฟลเดอร์โปรเจคเดียวกัน แล้วเขียนโค้ดดังนี้:
+สร้างไฟล์ `index.html` และ `app.js` ในโฟลเดอร์โปรเจคเดียวกัน แล้วเขียนโค้ดดังนี้
 
 ```html
 <!DOCTYPE html>
@@ -187,7 +187,7 @@ async function renderChart() {
 window.onload = renderChart;    
 ```
 
-ถ้าต้องการแยกกราฟของอุณหภูมิ และ ความชื้น สามารถทำได้ดังนี้
+ถ้าต้องการแยกกราฟของอุณหภูมิ และ ความชื้น ก็สามารถทำได้ดังนี้
 
 ```js
 async function fetchData() {
