update pm25 code

--- a/doc/4.iot_esp32.md
+++ b/doc/4.iot_esp32.md
@@ -453,56 +453,73 @@ $$
 - เราใช้ GPIO 27 ควบคุมขา LED (Pin 6) ของเซนเซอร์ (ผ่านทรานซิสเตอร์หรือโมดูลที่รองรับ)
 
 ```cpp
-// ตัวอย่าง: อ่านค่าเซนเซอร์ฝุ่น GP2Y1014AU0F แบบกดเปิด LED ชั่วขณะ
-// แล้ววัดค่าอะนาล็อก
+#include <DHT.h>
+#define DHTPIN 4
+#define DHTTYPE DHT11
+DHT dht(DHTPIN, DHTTYPE);
 
-// กำหนดพิน
-#define PIN_LED_CTRL  27   // ขาที่ควบคุม LED (Pin 6 ของเซนเซอร์) ผ่านทรานซิสเตอร์
-#define PIN_SENSOR_A  33   // ขา ADC ที่รับ Vo (Pin 4) หลังผ่าน Voltage Divider
+#include <WiFi.h>
+#include <esp_wifi.h>
+int measurePin = 36;
+int ledPower = 5;
+int samplingTime = 280;
+int deltaTime = 40;
+int sleepTime = 9680;
+float voMeasured = 0;
+float calcVoltage = 0;
+float dustDensity = 0;
+
+const char* ssid = "@JumboPlusIoT";
+const char* pass = "jp41jsfl";
+// http client
+#include <HTTPClient.h> 
+const char* serverName = "https://a552-202-28-251-54.ngrok-free.app/api/v1/data/"; 
 
 void setup() {
-  Serial.begin(115200);
+  Serial.begin(9600);
+  Serial.print("ESP Board MAC Address:  ");
+  Serial.println(WiFi.macAddress());
+
+  // WiFi.begin(ssid, pass); 
+  // while (WiFi.status() != WL_CONNECTED) { 
+  //   Serial.println("Connecting...  ");  
+  //   delay(1000);
+  // }
   
-  pinMode(PIN_LED_CTRL, OUTPUT);
-  digitalWrite(PIN_LED_CTRL, HIGH); // ปิด LED ไว้ก่อน (ขึ้นกับโมดูล อาจกลับกัน)
+  Serial.print("Wi-Fi connected."); 
+  Serial.print("IP Address : ");
+  Serial.println(WiFi.localIP());  
+
+  dht.begin();
+
+  pinMode(ledPower, OUTPUT);
 }
-
+ 
 void loop() {
-  // 1) เปิด LED โดยดึงสัญญาณ (LOW หรือ HIGH) ตามที่เซนเซอร์ต้องการ
-  digitalWrite(PIN_LED_CTRL, LOW); 
-  // 2) หน่วง ~280 ไมโครวินาที รอเซนเซอร์เซตตัว
-  delayMicroseconds(280);
+  float humidity = dht.readHumidity();
+  float temperature = dht.readTemperature();
+  Serial.print("อุณหภูมิ : ");
+  Serial.print(temperature);
+  Serial.println(" °c");
 
-  // 3) อ่านค่า ADC
-  int adcValue = analogRead(PIN_SENSOR_A);  // ESP32 ADC (0-4095 ตามค่าเริ่มต้น 12 บิต)
-  
-  // 4) หน่วง ~40 ไมโครวินาที (ตามสเปก)
-  delayMicroseconds(40);
+  Serial.print("ความชื้น : ");
+  Serial.print(humidity);
+  Serial.println(" %");
 
-  // 5) ปิด LED
-  digitalWrite(PIN_LED_CTRL, HIGH);
-
-  // 6) เหลือเวลาอีกประมาณ ~9.68 ms (หรือตามต้องการ) จึงค่อยวัดรอบถัดไป
-  // รวมแล้วรอบการวัด ~10 ms
-  delayMicroseconds(9680);
-
-  // แปลงเป็นแรงดัน (สมมติใช้ 3.3V เป็น Vref และ ADC 12 บิต)
-  float voltage = adcValue * (3.3 / 4095.0);
-
-  // คำนวณค่าฝุ่น (สูตรตัวอย่าง)
-  // ค่า offset และสัดส่วนต้องปรับตามสภาพจริงและวงจรที่ใช้
-  float dustDensity = 0.17 * voltage - 0.1; // mg/m^3 (ประมาณการ)
-
-  Serial.print("ADC = ");
-  Serial.print(adcValue);
-  Serial.print(", Voltage = ");
-  Serial.print(voltage, 3);
-  Serial.print(" V, DustDensity ~ ");
-  Serial.print(dustDensity, 3);
-  Serial.println(" mg/m^3");
-  
-  // อาจหน่วงเพิ่มเล็กน้อยหากไม่ต้องการอ่านถี่เกินไป
-  delay(200); 
+  digitalWrite(ledPower, LOW);
+  delayMicroseconds(samplingTime);
+  voMeasured = analogRead(measurePin);
+  delayMicroseconds(deltaTime);
+  digitalWrite(ledPower, HIGH);
+  delayMicroseconds(sleepTime);
+  calcVoltage = voMeasured * (3.3 / 1024.0);
+  // dustDensity = 170 * calcVoltage - 0.1;
+  dustDensity = 17.0 * calcVoltage - 0.1;
+  Serial.print("ความหนาแน่นของฝุ่นละออง : ");
+  Serial.print(dustDensity);
+  Serial.println(" ug/m³");
+ 
+  delay(6000);
 }
 ```
 
