--- a/doc/4.iot_esp32.md
+++ b/doc/4.iot_esp32.md
@@ -518,6 +518,22 @@ void loop() {
   Serial.print("ความหนาแน่นของฝุ่นละออง : ");
   Serial.print(dustDensity);
   Serial.println(" ug/m³");
+
+    // send api
+  HTTPClient http;
+  http.begin(serverName);
+  http.addHeader("Content-Type", "application/json"); 
+  String jsonData = "{";
+  jsonData += "\"sta_code\":\"A4\",";                   // Station code
+  jsonData += "\"sta_name\":\"Station 5\",";            // Station name
+  jsonData += "\"hum\":" + String(humidity) + ",";      // Humidity
+  jsonData += "\"temp\":" + String(temperature);        // Temperature
+  jsonData += "\"pm25\":" + String(dustDensity);        // Pm25
+  jsonData += "}";
+
+  Serial.println(jsonData);
+  int httpResponseCode = http.POST(jsonData);
+  http.end();
  
   delay(6000);
 }
